--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
+		"start": "vite start",
 		"build": "vite build",
+		"deploy": "npm run build && PORT=5173 HOST=localhost node build/index.js",
 		"preview": "vite preview",
+		"build-preview": "npm run build && npm run preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check .",
@@ -14,6 +17,7 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/cookie": "^0.5.1",
